# superior-agents

Meta-Pilot/meta-pilot-frontend/: next.config.mjs  package-lock.json  package.json
Meta-Pilot/meta-pilot-frontend/app/: layout.tsx  page.tsx
Meta-Pilot/meta-pilot-frontend/app/dashboard/: layout.tsx  page.tsx
Meta-Pilot/meta-pilot-frontend/app/docs/: page.tsx
Meta-Pilot/meta-pilot-frontend/components/Dashbaord/: AnalyticsDashboard.tsx  DashboardLayout.tsx  DashboardOverview.tsx  DashboardSidebar.tsx  DocSidebar.tsx  GasTracker.tsx  LatestAnnouncements.tsx  NotificationsDropdown.tsx  RecentActivityList.tsx  TokenBalances.tsx  UserProfileDropdown.tsx
Meta-Pilot/meta-pilot-frontend/hooks/: use-wallet.ts
Meta-Pilot/meta-pilot-frontend/lib/: utils.ts
Meta-Pilot/metapilot-backend/: .gitignore  README.md  cleanup.sh  pyproject.toml  requirements.txt  run.py  setup.py
Meta-Pilot/metapilot-backend/metapilot/: __init__.py
Meta-Pilot/metapilot-backend/metapilot/api/: __init__.py  app.py  routes.py  routes_new_endpoints.py
Meta-Pilot/metapilot-backend/metapilot/core/: __init__.py  agent.py  learning.py  memory.py
Meta-Pilot/metapilot-backend/metapilot/core/agents/: __init__.py  base_agent.py  cross_chain_agent.py  dao_agent.py  defi_agent.py  governor_agent.py  market_intelligence_agent.py  nft_agent.py  risk_agent.py
Meta-Pilot/metapilot-backend/metapilot/core/learning/: __init__.py  reinforcement_learner.py
Meta-Pilot/metapilot-backend/metapilot/core/memory/: __init__.py  vector_memory.py
Meta-Pilot/metapilot-backend/metapilot/core/orchestration/: __init__.py  agent_orchestrator.py
Meta-Pilot/metapilot-backend/metapilot/examples/: usage_example.py
Meta-Pilot/metapilot-backend/metapilot/models/: __init__.py  schemas.py
Meta-Pilot/metapilot-backend/metapilot/services/: __init__.py  ai_service.py  blockchain_service.py  monitoring_service.py  user_service.py
Meta-Pilot/metapilot-backend/metapilot/tests/: __init__.py
Meta-Pilot/metapilot-backend/metapilot/utils/: __init__.py  auth.py
Meta-Pilot/metapilot-backend/tests/: conftest.py  test_api.py  test_services.py
Meta-Pilot/metapilot-backend/tests/unit/core/agents/: test_base_agent.py
Meta-Pilot/metapilot-backend/tests/unit/core/learning/: test_reinforcement_learner.py
Meta-Pilot/metapilot-backend/tests/unit/core/memory/: test_vector_memory.py
Meta-Pilot/metapilot-backend/tests/unit/core/orchestration/: test_agent_orchestrator.py
Meta-Pilot/metapilot-backend/tests/unit/services/: test_ai_service.py  test_ai_service_new.py  test_blockchain_service.py
(+62 files in other folders)
